FIX submit buton spacing on mobile

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -259,7 +259,7 @@
 
         button {
           border-radius: 5px;
-          padding: 10px 40px;
+          padding: 10px 20px;
         }
       }
 
